--- a/nosotros.html
+++ b/nosotros.html
@@ -12,9 +12,13 @@
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="nosotros">
-	<div class="logos" >
-    <a href="index.html" > <img src="imagenes/logo.png" alt="TUKISHOP" title="TUKI Shop" width="350" height="200"  /> </a>
-    <a href="index.html" > <img src="imagenes/logo2.png" alt="TUKISHOP" title="TUKI Shop" width="400" class="logo2" /> </a>
+	<div class="logo">
+  <div class="logos" >
+    <a href="index.html" > <img src="imagenes/logo.png" alt="TUKISHOP" title="TUKI Shop"  /> </a>
+  </div>
+  <div class="logos2">
+    <a href="index.html" > <img src="imagenes/logo2.png" alt="TUKISHOP" title="TUKI Shop"  /> </a>
+  </div>
   </div>
   <header>
     <nav class="menuinfo" >
@@ -27,8 +31,8 @@
         <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width=60 /> </a> </li>
       </ul>
       <ul class="menu2" >
-        <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="25" /> </a> </li>
          <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
+         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="25" /> </a> </li>
       </ul>
       
     </nav>
@@ -38,11 +42,11 @@
 		<h3> NOSOTROS </h3>
 	</div>
 	<div class="imagenprincipal">
-		<div class="imagen1">
-			<img src="imagenes/mascotas.png" alt="mascotas" title="Nosotros" width="1100" height="400" />
+		<div>
+			<img src="imagenes/mascotas.png" alt="mascotas" title="Nosotros" class="imagen1" />
 		</div>
 		<div class="video1">
-			<a href="https://youtu.be/488uvzpPfj8" target="_blank"> <img src="imagenes/youtubee.jpg" width="400" title="Video TUKI Shop" > </a>
+			<a href="https://youtu.be/488uvzpPfj8" target="_blank"> <img src="imagenes/youtubee.jpg" title="Video TUKI Shop" class="video1" > </a>
 		</div>
 	</div>
 
