Realicé responsive la sección Nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -32,7 +32,7 @@
       </ul>
       <ul class="menu2" >
          <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
-         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="25" /> </a> </li>
+         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="40" /> </a> </li>
       </ul>
       
     </nav>
@@ -81,7 +81,7 @@
 	<div class="criticas">
 		<section>
 		<article>
-			<table border="3" cellpadding="6" cellspacing="1">
+			<table cellpadding="6" cellspacing="1">
 				<tr>
 					<th class="nombre">Sandra Galoppo</th>	
 					<th>El mejor petshop de Capital. Todo de excelente calidad, variedad de marcas, excelente atención, variedad de productos. Desde que lo encontré hace dos años no lo cambio por nada, siempre consigo todo lo mejor que necesito para mi gato.</th> 
