--- a/nosotros.html
+++ b/nosotros.html
@@ -51,28 +51,36 @@
 	</div>
 
 	<main>
+
+
 	<div> 
 		<h4> ¿Quiénes somos? </h4>
 	</div>
-
-	<div class="parrafo">
+		<div class="parrafo">
+		<div>
 		<p>Somos una empresa dedicada a la alimentación y cuidado animal doméstico fundada en 2016, la cual cuenta con 11 sucursales a lo largo de toda la Capital Federal. Contamos con un personal ampliamente capacitado para satisfacer cualquier necesidad de nuestros clientes. </p>
 		<p>Trabajamos con entidades terciarizadas sin fines de lucro como IAE Pets y Animal´s Life cuyo objetivo es el trabajo en equipo y la inclusión de mascotas en familias de cualquier tipo. Por otro lado, somos líderes en ventas según el estudio PL Experience, el cual se realiza anualmente.</p>
 	</div>
+		</div>
+
 
 	<div>
 		<h4> Nuestra dedicación por los animales </h4>
 	</div>
 	<div class="parrafo">
+		<div>
 		<p>Desde el primer día, nos hemos unido con la misión de crear experiencias más rápidas y sin fricciones. Nuestro objetivo es crear un mundo en el que las personas puedan satisfacer fácilmente las necesidades de los animales siendo ellas mismas. Con nuestra plataforma de unidad segura, nuestro objetivo es transformar la forma en que los animales viven, crecen y experimentan. Creemos que la vida es mejor con perros. Al retribuir a las comunidades y proporcionar recursos y educación, nuestro objetivo es ayudar a los perros a prosperar donde los aman: el hogar. Nos esforzamos por hacer del mundo un lugar mejor para los perros y su gente.</p>
 	</div>
+</div>
 	<div>
 		<h4> ¿Por qué confiar en nosotros? </h4>
 	</div>
 
 	<div class="parrafo">
+		<div>
 		<p>Hemos pensado en todo, para que no tengas que hacerlo. Desde seguimientos personalizados de seguridad sobre los productos hasta servicios de belleza e higiene para que ser un padre de mascotas sea fácil. Somos tu ventanilla única para el cuidado de las mascotas, la salud y el entrenamiento de las mismas. 
 		Creemos que la salud, la felicidad y la longevidad de un perro comienzan con su comida, y los ingredientes superiores y las técnicas de cocción conducen a la mejor nutrición. Nuestro alimento saludable y totalmente natural está en porciones perfectas para que su perro proporcione los nutrientes que necesita y brinde resultados visibles, como pelaje brillante, gran energía y una mejor digestión.</p>
+		</div>
 	</div>
 
 	<div>
@@ -109,7 +117,7 @@
 	</div>
 
 	<div class="visita">
-		<span> <strong> ¡VISITA NUESTRA <a href="tienda.html" target="_blank" > TIENDA ONLINE! </a> </strong> </span>
+		<span> <strong> ¡VISITA NUESTRA <a href="tienda.html" target="_blank" class="ancla" > TIENDA ONLINE! </a> </strong> </span>
 	</div>	
 
 </main>
