--- a/nosotros.html
+++ b/nosotros.html
@@ -28,7 +28,7 @@
         <li><a href="sucursales.html" title="Sucursales">SUCURSALES</a></li>
         <li><a href="contacto.html" title="Contacto">CONTACTO</a></li>
         <li><a href="login.html" title="Login">LOGIN</a></li>
-        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width=60 /> </a> </li>
+        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width="50" /> </a> </li>
       </ul>
       <ul class="menu2" >
          <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
