--- a/sucursales.html
+++ b/sucursales.html
@@ -9,42 +9,60 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Dancing+Script:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@400;600&family=Electrolize&family=Grand+Hotel&family=Handlee&family=Heebo:wght@300;400;600&family=Lobster&family=Mali:wght@200;300&family=Mandali&family=PT+Sans:ital,wght@0,400;0,700;1,400&family=Pacifico&family=Patrick+Hand&family=Rubik+Beastly&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="sucursales">
-	<div class="logos" >
-    <a href="index.html" > <img src="imagenes/logo.png" alt="TUKISHOP" title="TUKI Shop" width="350" height="200"  /> </a>
-    <a href="index.html" > <img src="imagenes/logo2.png" alt="TUKISHOP" title="TUKI Shop" width="400" class="logo2" /> </a>
+	<div class="logo">
+  <div class="logos" >
+    <a href="index.html" > <img src="imagenes/logo.png" alt="TUKISHOP" title="TUKI Shop"  /> </a>
+  </div>
+  <div class="logos2">
+    <a href="index.html" > <img src="imagenes/logo2.png" alt="TUKISHOP" title="TUKI Shop"  /> </a>
+  </div>
   </div>
   <header>
-    <nav class="menuinfo" >
-      <ul class="menu1" >
-        <li><a href="index.html" title="Inicio" >INICIO</a></li>
-        <li><a href="nosotros.html" title="Nosotros" >NOSOTROS</a></li>
-        <li><a href="sucursales.html" title="Sucursales">SUCURSALES</a></li>
-        <li><a href="contacto.html" title="Contacto">CONTACTO</a></li>
-        <li><a href="login.html" title="Login">LOGIN</a></li>
-        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width=60 /> </a> </li>
+    <nav class="navbar navbar-expand-lg bg-success border border-light rounded">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse px-4 " id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white fw-bold fs-4" href="index.html">INICIO</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="sucursales.html">SUCURSALES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="contacto.html">CONTACTO</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="login.html">LOGIN</a>
+        </li>
       </ul>
-      <ul class="menu2" >
-        <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="25" /> </a> </li>
-         <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
-      </ul>
-      
-    </nav>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+    </div>
+  </div>
+</nav>
   </header>
   <div>
 	<h3> SUCURSALES </h3>
 </div>
 
-	<div> 
-		<h4> Contamos con sucursales en toda la Capital Federal. ¡Te invitamos a buscar la más cercana a tu domicilio!</h4>
+	<div class="d-flex p-2 d-flex justify-content-center mb-4" > 
+		<h4 class="text-info"> Contamos con sucursales en toda la Capital Federal. ¡Te invitamos a buscar la más cercana a tu domicilio!</h4>
 	</div>
 
-	<div class="sucus">
-		<div> <p> SUCURSALES: </p>
-		</div>
-		<div class="listado">
+	<div>
+		<div>
 		 <form>
 			<select>
 				<option> Seleccionar </option>
@@ -67,22 +85,21 @@
 	<fieldset>
 	
 	</fieldset>
-	
-	<div class="imagen">
-		<img src="imagenes/gato.jpg" alt="gato" title="Visitanos" width="250" border="3" />
-	</div>
-
 </div>
 
-<div class="maps">
-	<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.23949906467!2d-58.43329845000001!3d-34.615823750000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658188843878!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </p>
+<div>
+	<div> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.23949906467!2d-58.43329845000001!3d-34.615823750000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658188843878!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
 	</div>
 
 <footer>
 	<div> 
-		<span> <strong> ¡Reservá tu turno haciendo <a href="contacto.html" > click aquí</a>! </strong> </span>
+		<span> ¡Reservá tu turno haciendo <a href="contacto.html" > click aquí</a>!</span>
 	</div>
 </footer>
+
+
+	<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 </html>
