Restablecí casi todos los archivos porque se me rompió la pagina

--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,7 @@
 		</form>
 	</div>
 
-	<div class="apellido">
+	<div class="nombre">
 		<span> Apellido </span>
 	</div>
 	<div>
@@ -66,7 +66,7 @@
 		</form>
 	</div>
 
-	<div class="email">
+	<div class="nombre">
 		<span> Correo electrónico </span>
 	</div>
 	<div>
@@ -74,7 +74,7 @@
 			<input type="text" placeholder="Email" />
 		</form>
 	</div>
-	<div class="telefono">
+	<div class="nombre">
 		<span> Teléfono celular </span>
 	</div>
 	<div>
@@ -84,14 +84,14 @@
 	</div>
 
 
-	<div class="detalle"> 
+	<div class="nombre"> 
 		<span> Comentarios </span>
 	</div>
 	<div class="comen">
 		<textarea placeholder="Detallanos tu consulta..."></textarea>
 	</div>
 
-	<div class="notificaciones"> 
+	<div class="nombre"> 
 		<form>
 			<input type="checkbox" name="opcion" /> <span> Deseo recibir notificaciones de TUKI SHOP </span>
 		</form>
