--- a/sucursales.html
+++ b/sucursales.html
@@ -24,7 +24,7 @@
   </div>
   </div>
   <header>
-    <nav class="navbar navbar-expand-lg bg-success border border-light rounded">
+    <nav class="navbar navbar-expand-lg bg-success border border-light rounded" >
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -44,6 +44,9 @@
         <li class="nav-item active">
           <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="login.html">LOGIN</a>
         </li>
+        <li>
+        	<a class="nav-link active" aria-current="page" href="tienda.html" target="_blank" >  <img src="imagenes/carrito.png" width="50" /> </a>
+        </li>
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -57,43 +60,52 @@
 	<h3> SUCURSALES </h3>
 </div>
 
-	<div class="d-flex p-2 d-flex justify-content-center mb-4" > 
+	<div class="d-flex p-2 d-flex justify-content-center mb-4 text-center fs-3" > 
 		<h4 class="text-info"> Contamos con sucursales en toda la Capital Federal. ¡Te invitamos a buscar la más cercana a tu domicilio!</h4>
 	</div>
 
-	<div>
+	<div class="d-flex p-2 d-flex justify-content-evenly mb-5 ">
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
 		<div>
-		 <form>
-			<select>
-				<option> Seleccionar </option>
-				<option> Palermo </option>
-				<option> Villa Pueyrredon </option>
-				<option> Belgrano </option>
-				<option> Paternal </option>
-				<option> Once </option>
-				<option> San Telmo </option>
-				<option> Recoleta </option>
-				<option> Retiro </option>
-				<option> Caballito </option>
-				<option> Liniers </option>
-				<option> Villa Lugano </option>
+			<select class="form-select form-select-lg mb-3 border border-info rounded" aria-label=".form-select-lg example" width="500">
+  			<option selected>Seleccionar</option>
+  			<option value="1">Palermo</option>
+  			<option value="2">Villa Pueyrredon</option>
+  			<option value="3">Belgrano</option>
+  			<option value="3">Paternal</option>
+  			<option value="3">Once</option>
+  			<option value="3">San Telmo</option>
+  			<option value="3">Recoleta</option>
+  			<option value="3">Retiro</option>
+  			<option value="3">Liniers</option>
+  			<option value="3">Villa Lugano</option>
 			</select>
-
-			<input type="submit" value="Buscar" />
-		</form>
-	</div>
-	<fieldset>
-	
-	</fieldset>
+		</div>
+		<div>
+		 <button type="button" class="btn btn-primary btn-lg btn btn-parimary border border-light rounded">Buscar</button>
+		</div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
 </div>
 
-<div>
+<div class="maps">
 	<div> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.23949906467!2d-58.43329845000001!3d-34.615823750000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658188843878!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
 	</div>
 
 <footer>
-	<div> 
-		<span> ¡Reservá tu turno haciendo <a href="contacto.html" > click aquí</a>!</span>
+	<div class="d-flex p-2 d-flex justify-content-center mb-4 text-center fs-3"> 
+		<span class="text-info"> ¡Reservá tu turno haciendo <a href="contacto.html" > click aquí</a>!</span>
 	</div>
 </footer>
 
