--- a/tienda.html
+++ b/tienda.html
@@ -12,10 +12,16 @@
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="tienda">
+    
+    <div class="logo">
   <div class="logos" >
-    <a href="index.html" > <img src="imagenes/logo.png" title="TUKI Shop" width="350" height="200"  /> </a>
-    <a href="index.html" > <img src="imagenes/logo2.png" title="TUKI Shop" width="400" class="logo2" /> </a>
+    <a href="index.html" > <img src="imagenes/logo.png" alt="TUKISHOP" title="TUKI Shop"  /> </a>
   </div>
+  <div class="logos2">
+    <a href="index.html" > <img src="imagenes/logo2.png" alt="TUKISHOP" title="TUKI Shop"  /> </a>
+  </div>
+  </div>
+
   <header>
     <nav class="menuinfo" >
       <ul class="menu1" >
@@ -24,11 +30,11 @@
         <li><a href="sucursales.html" title="Sucursales">SUCURSALES</a></li>
         <li><a href="contacto.html" title="Contacto">CONTACTO</a></li>
         <li><a href="login.html" title="Login">LOGIN</a></li>
-        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width=60 /> </a> </li>
+        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width=50 /> </a> </li>
       </ul>
       <ul class="menu2" >
-        <li> <a href="#" > <img src="imagenes/lupa.png" title="Buscar" width="25" /> </a> </li>
          <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
+         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="40" /> </a> </li>
       </ul>
       
     </nav>
