Agregué Bootstrap en la sección Login

--- a/sucursales.html
+++ b/sucursales.html
@@ -105,7 +105,7 @@
 
 <footer>
 	<div class="d-flex p-2 d-flex justify-content-center mb-4 text-center fs-3"> 
-		<span class="text-info"> ¡Reservá tu turno haciendo <a href="contacto.html" > click aquí</a>!</span>
+		<span class="text-info"> ¡Reservá tu turno haciendo <a href="contacto.html" class="text-light" > click aquí</a>!</span>
 	</div>
 </footer>
 
