--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Dancing+Script:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@400;600&family=Electrolize&family=Grand+Hotel&family=Handlee&family=Heebo:wght@300;400;600&family=Lobster&family=Mali:wght@200;300&family=Mandali&family=PT+Sans:ital,wght@0,400;0,700;1,400&family=Pacifico&family=Patrick+Hand&family=Rubik+Beastly&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="login">
@@ -22,23 +24,39 @@
   </div>
   </div>
   <header>
-    <nav class="menuinfo" >
-      <ul class="menu1" >
-        <li><a href="index.html" title="Inicio" >INICIO</a></li>
-        <li><a href="nosotros.html" title="Nosotros" >NOSOTROS</a></li>
-        <li><a href="sucursales.html" title="Sucursales">SUCURSALES</a></li>
-        <li><a href="contacto.html" title="Contacto">CONTACTO</a></li>
-        <li><a href="login.html" title="Login">LOGIN</a></li>
-        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width="50" /> </a> </li>
+    <nav class="navbar navbar-expand-lg bg-success border border-light rounded" >
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse px-4 " id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white fw-bold fs-4" href="index.html">INICIO</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="sucursales.html">SUCURSALES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="contacto.html">CONTACTO</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="login.html">LOGIN</a>
+        </li>
+        <li>
+        	<a class="nav-link active" aria-current="page" href="tienda.html" target="_blank" >  <img src="imagenes/carrito.png" width="50" /> </a>
+        </li>
       </ul>
-      <ul class="menu2" >
-         <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
-         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="40" /> </a> </li>
-      </ul>
-      
-    </nav>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+    </div>
+  </div>
+</nav>
   </header>
-  <main class="cuerpo">
+  <main>
   	<div class="titulosecundario">
 		<h3> LOGIN </h3>
 	</div>
@@ -52,9 +70,11 @@
 				<label for="usuario" > USUARIO: </label> 
 	</div>
 
-	<div class="datos"> 
+	<div> 
 		<form> 
-			<input type="text" id="usuario" /> 
+			<div class="input-group mb-3 d-flex justify-content-center text-info" >
+  				<input type="text" class="form-control-lg bg-light bg-opacity-25 border-warning" placeholder="" aria-label="Username">
+			</div>
 		</form>
 
 	</div>
@@ -63,16 +83,18 @@
 				<label for="contrasena" > CONTRASEÑA: </label>
 	</div>
 
-	<div class="datos">
+	<div>
 		<form>
-			<input type="password" id="contrasena" />
+			<div class="input-group mb-3 d-flex justify-content-center text-info" >
+  				<input type="password" class="form-control-lg bg-light bg-opacity-25 border-warning" placeholder="" aria-label="Password">
+			</div>
 		</form>
 
 	</div>
 
 	<div class="datos">
 		<form>
-			<input type="radio" name="opcion"/> <span> NO SOY UN ROBOT </span>
+			<input class="form-check-input bg-warning" type="checkbox" value="" id="flexCheckDefault"> <span> NO SOY UN ROBOT </span>
 		</form>
 	</div>
 
@@ -80,9 +102,9 @@
 		<span> ¿Olvidaste tu Usuario/Contraseña? <a href="#" > Hace click aquí </a> </span>
 	</div>
 
-	<div class="datos"> 
+	<div class="d-flex justify-content-center"> 
 		<form> 
-			<input type="submit" value="INGRESAR" />
+			<button type="button" class="btn btn-outline-warning btn-lg bg-light bg-opacity-25"> <a href="#" class="text-warning">INGRESAR </a></button>
 		</form>
 	</div>
 
@@ -93,6 +115,9 @@
 </div>
 
 </main>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 
 </body>
 </html>		
