Transforme mi hoja de estilos.scss usando SASS

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <main>
 
   <div class="slider">
-    <img src="imagenes/slider1.jpg" alt="slider1" title="TUKI Shop" /> 
-    <img src="imagenes/slider3.png" alt="slider2" title="TUKI Shop"  />
+    <a href="#" class="foto1" ><img src="imagenes/slider1.jpg" alt="slider1" title="TUKI Shop" /> </a>
+    <a href="#" class="foto2" ><img src="imagenes/slider3.png" alt="slider2" title="TUKI Shop"  /> </a>
   </div>
 
   <div class="titulosecundario" >
@@ -60,7 +60,7 @@
       <div class=" primeratabla">
         <table cellpadding="1" cellspacing="1" >
                 <tr>
-                  <th> <img src="imagenes/perro.png" alt="perro" title="Perros" /> </th>
+                  <th> <a href="#"> <img src="imagenes/perro.png" alt="perro" title="Perros" /> </a> </th>
                 </tr>
                 <tr>
                   <td>Los perros son seres sociables y viven en manada con otros perros o con humanos. Suelen vivir unos 13 o 15 años y, algunos como los de raza pequeña, llegan a los 17 años. Los perros son carnívoros, al igual que sus antepasados, los lobos. suelen comer verduras o cereales cocidos, como el arroz, y alimentos balanceados que concentran todos los nutrientes necesarios para mantener su buena salud. La calidad de vida, tanto por la alimentación como por los cuidados de su salud, es un factor de influencia para la expectativa de vida. Contamos tanto con alimentos balanceados Royal Canin o Proplan como así también accesorios que mejorarán su vida.
@@ -72,7 +72,7 @@
               </table>
               <table cellpadding="1" cellspacing="1" >
                 <tr>
-                  <th> <img src="imagenes/gato.png" alt="gato" title="Gatos" /> </th>
+                  <th> <a href="#"> <img src="imagenes/gato.png" alt="gato" title="Gatos" /> </a> </th>
                 </tr>
                 <tr>
                   <td>El gato es un felino carnívoro y mamífero cuadrúpedo, que ha convivido con los seres humanos desde hace unos 9500 años. Existen docenas de razas de gatos, con pronunciadas diferencias morfológicas y de carácter. La esperanza de vida del gato promedio es de unos 12 a 14 años, pero las hembras pueden incluso vivir un par de años más. Los gatos son animales de alto desgaste energético, por lo que suelen dormir en abundancia a lo largo del día. Debido a esto dependen de una buena alimentación. TUKI Shop te ofrece el mejor alimento por excelencia Cat Chow para que puedas darle lo que se merece.
@@ -84,7 +84,7 @@
               </table>
              <table cellpadding="1" cellspacing="1" >
                 <tr>
-                  <th> <img src="imagenes/peces.png" alt="peces" title="Peces" /> </th>
+                  <th> <a href="#"> <img src="imagenes/peces.png" alt="peces" title="Peces" /> </a> </th>
                 </tr>
                 <tr>
                   <td>Los peces son los primeros animales vertebrados que surgieron a lo largo de la evolución animal, hace unos 400 millones de años. Dentro de los peces existen varias formas de alimentación: Hervívoros, Carnívoros, Limnívoros y Omnívoros. no pueden controlar su temperatura corporal, la cual depende de las condiciones externas. Son una fuente muy importante de alimentación humana, y representan un hobby interesante para quienes deciden criar peces como mascotas hogareñas y arman y mantienen sus propios acuarios. Por ello contamos con alimentos y peceras de primera calidad. 
@@ -96,7 +96,7 @@
               </table>
              <table cellpadding="1" cellspacing="1" >
                 <tr>
-                  <th> <img src="imagenes/roedor.png" alt="roedor" title="Roedores" /> </th>
+                  <th> <a href="#"> <img src="imagenes/roedor.png" alt="roedor" title="Roedores" /> </a> </th>
                 </tr>
                 <tr>
                   <td>Los roedores son los animales más adaptables y los más prolíficos del mundo. Se reproducen bien, crecen rápido, aprenden rápido y se adaptan a una gran variedad de condiciones locales. La mayor parte convierten eficazmente la vegetación grosera en carne, aunque solo estén dotados de un estómago simple. Poseen dientes frontales en continuo crecimiento para morder o roer. Los roedores mas comúnes son: Agutí, Capibara, Nutria, Conejo de Indias, Hutia, Liebre patagónica, Paca y Vizcacha. Te invitamos a pasar por nuestra tienda para comprobar la variedad de productos a disposición de estos adorables animalitos.
@@ -108,7 +108,7 @@
               </table>
              <table cellpadding="1" cellspacing="1"  >
                 <tr>
-                  <th> <img src="imagenes/reptil.png" alt="reptil" title="Reptiles" /> </th>
+                  <th> <a href="#"> <img src="imagenes/reptil.png" alt="reptil" title="Reptiles" /> </a> </th>
                 </tr>
                 <tr>
                   <td>Los reptiles son animales cuadrúpedos vertebrados, de sangre fría y piel escamosa, que se originaron hace 318 millones de años. Los reptiles coexisten hoy en día con el hombre y ocupan un lugar destacado en su imaginario, llegando incluso a constituir animales de compañía. Como reptiles se alude a cuatro grandes conjuntos: tortugas, lagartos y serpientes, cocodrilos y tuátaras. La mayoría de los reptiles son carnívoros y tienen un modelo digestivo simple. Su metabolismo es mucho más lento que el de los mamíferos. Contamos con alimentos ReptoMin de excelentísima calidad y a precios inmejorables.
@@ -194,9 +194,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
