Agregué keywords y description en todas las secciones

--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Concert+One&family=Dancing+Script:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@400;600&family=Electrolize&family=Grand+Hotel&family=Handlee&family=Heebo:wght@300;400;600&family=Lobster&family=Mali:wght@200;300&family=Mandali&family=PT+Sans:ital,wght@0,400;0,700;1,400&family=Pacifico&family=Patrick+Hand&family=Rubik+Beastly&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
 
+  <meta name="keywords" content="animales, mascotas, perros, gatos, aves, reptiles, peces, pet, petshop, juguetes, felicidad, familia, alimento, comida, accesorios, caba, capital, razas, especies, tukishop, buenosaires" />
+  <meta name="description" content="Si sos de Buenos Aires no podés perderte la oportunidad de conocer alguna de nuestras sucursales con los mejores precios y accesorios para tu mascota" />
+
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="contacto">
