Agregué etiquetas semanticas a los html y modifique estilos

--- a/contacto.html
+++ b/contacto.html
@@ -44,52 +44,65 @@
   <main>
 
 	<div class="titulo" > 
-		<p> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> </p> <h3> CONTACTO </h3> 
+		<p> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png"	 alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> </p> <h1> CONTACTO </h1> 
 		<p> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" /> <img src="imagenes/correo.png" alt="correo" title="Contacto" />
 	</div>
 
 	<div class="datos"> 
-		<p> Por favor, completá el formulario para que nuestro equipo se ponga en contacto contigo a la brevedad: </p>
-	</div>
-	<div class="nombre">
-		<span> Nombre </span>
-	</div>
-	<div>
-		<form>
-			<input type="text" placeholder="Nombre" />
-		</form>
+		<h3> Por favor, completá el formulario para que nuestro equipo se ponga en contacto contigo a la brevedad: </h3>
 	</div>
 
-	<div class="nombre">
-		<span> Apellido </span>
-	</div>
 	<div>
-		<form> 
-			<input type="text" placeholder="Apellido" />
-		</form>
-	</div>
+	<section>
+		<article>
 
-	<div class="nombre">
-		<span> Correo electrónico </span>
-	</div>
-	<div>
-		<form>
-			<input type="text" placeholder="Email" />
-		</form>
-	</div>
-	<div class="nombre">
-		<span> Teléfono celular </span>
-	</div>
-	<div>
-		<form>
-			<input type="text" placeholder="Teléfono" />
-		</form>
-	</div>
+				<div class="nombre">
+					<span> Nombre </span>
+				</div>
+
+				<div>
+					<form>
+						<input type="text" placeholder="Nombre" />
+					</form>
+				</div>
+
+				<div class="nombre">
+					<span> Apellido </span>
+				</div>
+
+				<div>
+					<form> 
+						<input type="text" placeholder="Apellido" />
+					</form>
+				</div>
+
+				<div class="nombre">
+					<span> Correo electrónico </span>
+				</div>
+
+				<div>
+					<form>
+						<input type="text" placeholder="Email" />
+					</form>
+				</div>
+
+				<div class="nombre">
+					<span> Teléfono celular </span>
+				</div>
+
+				<div>
+					<form>
+						<input type="text" placeholder="Teléfono" />
+					</form>
+				</div>
+
+				<div class="nombre"> 
+					<span> Comentarios </span>
+				</div>
+		</article>
+	</section>
 
 
-	<div class="nombre"> 
-		<span> Comentarios </span>
-	</div>
 	<div class="comen">
 		<textarea placeholder="Detallanos tu consulta..."></textarea>
 	</div>
@@ -105,8 +118,11 @@
 			<input type="submit" />
 		</form>
 	</div>
+	
 	<div class="telefono">
-		<p> Podés solicitar tu turno enviándonos un contacto a través de este formulario o comunicándote al 011-5351-9367 </p>
+		<section>
+			<p> Podés solicitar tu turno enviándonos un contacto a través de este formulario o comunicándote al 011-5351-9367 </p>
+		</section>
 	</div>
 
 </main>
