--- a/index.html
+++ b/index.html
@@ -50,13 +50,20 @@
     <a href="#" class="foto2" ><img src="imagenes/slider3.png" alt="slider2" title="TUKI Shop"  /> </a>
   </div>
 
-  <div class="titulosecundario" >
-    <h2> ¡Sabemos lo que tu mascota necesita! </h2>
+  <div>
+    <section>
+      <div class="titulosecundario" >
+        <h1> ¡Sabemos lo que tu mascota necesita! </h1>
+      </div>
+      <div class="texto1" >
+        <p> <em> Contamos con una amplia variedad de productos y servicios a tu disposición para que puedas darle a tu mascota el trato y afecto que merece y mejores su calidad de vida. A continuación podras obtener información específica para conocer mas sobre ellos. </em> </p>
+        <p> <em> No olvides visitar nuestra tienda online en la que podrás conocer nuestras increíbles promociones. También podes ingresar en nuestras redes sociales mediante las cuales publicamos activamente información para mantenerte al dia en TUKI Shop. </em> </p>
+      </div>
+    </section>
   </div>
-  <div class="texto1" >
-    <p> <em> Contamos con una amplia variedad de productos y servicios a tu disposición para que puedas darle a tu mascota el trato y afecto que merece y mejores su calidad de vida. A continuación podras obtener información específica para conocer mas sobre ellos. </p>
-    <p> No olvides visitar nuestra tienda online en la que podrás conocer nuestras increíbles promociones. También podes ingresar en nuestras redes sociales mediante las cuales publicamos activamente información para mantenerte al dia en TUKI Shop. </em> </p>
-  </div>
+  
+
+
   <div>
     <section class="seccion1"  >
     <article class="articulo1" >
@@ -157,7 +164,7 @@
   </div>
 
   <footer class="redes" > 
-      <p> Nuestras Redes </p>
+      <h2> Nuestras Redes </h2>
 
       <div class="grid">
 
