--- a/nosotros.html
+++ b/nosotros.html
@@ -42,7 +42,7 @@
   </header>
 
   	<div class="titulo">
-		<h3> NOSOTROS </h3>
+		<h1> NOSOTROS </h1>
 	</div>
 	<div class="imagenprincipal">
 		<div>
@@ -57,7 +57,7 @@
 
 
 	<div> 
-		<h4> ¿Quiénes somos? </h4>
+		<h2> ¿Quiénes somos? </h2>
 	</div>
 		<div class="parrafo">
 		<div>
@@ -67,7 +67,7 @@
 		</div>
 
 	<div>
-		<h4> Nuestra dedicación por los animales </h4>
+		<h2> Nuestra dedicación por los animales </h2>
 	</div>
 
 		<div class="parrafo">
@@ -79,7 +79,7 @@
 	</div>
 </div>
 	<div>
-		<h4> ¿Por qué confiar en nosotros? </h4>
+		<h2> ¿Por qué confiar en nosotros? </h2>
 	</div>
 
 	<div class="parrafo">
@@ -90,7 +90,7 @@
 	</div>
 
 	<div>
-		<h4> Experiencias de nuestros clientes </h4>
+		<h2> Experiencias de nuestros clientes </h2>
 	</div>
 	<div class="criticas">
 		<section>
@@ -122,9 +122,9 @@
 	</section>
 	</div>
 
-	<div class="visita">
+	<footer class="visita">
 		<span> <strong> ¡VISITA NUESTRA <a href="tienda.html" target="_blank" class="ancla" > TIENDA ONLINE! </a> </strong> </span>
-	</div>	
+	</footer>
 
 </main>
 </body>
