--- a/tienda.html
+++ b/tienda.html
@@ -46,16 +46,13 @@
   <main>
 
   <div>
-    <h3> Bienvenido/a a nuestra tienda online oficial </h3>
+    <h1> Bienvenido/a a nuestra tienda online oficial </h1>
   </div>
   <div class="corte">
-    
-     
- 
   </div>
 
   <div>
-    <h4> Alimentos </h4>
+    <h2> Alimentos </h2>
   </div>
   <div>
     <section>
@@ -193,7 +190,7 @@
 
 <div>
     <div>
-    <h4> Accesorios </h4>
+    <h2> Accesorios </h2>
   </div>
 
 <div>
@@ -332,7 +329,7 @@
   </div>
 
   <div>
-    <h4> Higiente y estética </h4>
+    <h2> Higiente y estética </h2>
   </div>
 
   <div>
@@ -408,7 +405,7 @@
   </div>
 
   <div>
-    <h4> Suplementos </h4>
+    <h2> Suplementos </h2>
   </div>
 
   <div>
@@ -469,9 +466,11 @@
 
 </div>
 
+<footer>
 <div class="final">
   <span> Ante cualquier duda dejanos tu <a href="contacto.html" title="Contacto" > consulta  </a> </span>
 </div>
+</footer>
 </main>
 
 </body>
