--- a/login.html
+++ b/login.html
@@ -59,63 +59,66 @@
   </div>
 </nav>
   </header>
+
   <main>
+
   	<div class="titulosecundario">
-		<h3> LOGIN </h3>
-	</div>
+			<h1> LOGIN </h1>
+		</div>
+
 	<div class="flechita"> 
 		<img src="imagenes/flechaabajo.png" alt="flechaabajo" title="Abajo" /> 
 	</div>
 
 	<div class="general">	
+		<section>
+					<div class="datos">
+								<label for="usuario" > USUARIO: </label> 
+					</div>
 
-	<div class="datos">
-				<label for="usuario" > USUARIO: </label> 
+					<div> 
+						<form> 
+							<div class="input-group mb-3 d-flex justify-content-center text-info" >
+				  				<input type="text" class="form-control-lg bg-light bg-opacity-25 border-warning" placeholder="" aria-label="Username">
+							</div>
+						</form>
+
+					</div>
+					
+					<div class="datos">
+								<label for="contrasena" > CONTRASEÑA: </label>
+					</div>
+
+					<div>
+						<form>
+							<div class="input-group mb-3 d-flex justify-content-center text-info" >
+				  				<input type="password" class="form-control-lg bg-light bg-opacity-25 border-warning" placeholder="" aria-label="Password">
+							</div>
+						</form>
+					</div>
+
+					<div class="datos">
+						<form>
+							<input class="form-check-input bg-warning" type="checkbox" value="" id="flexCheckDefault"> <span> NO SOY UN ROBOT </span>
+						</form>
+					</div>
+
+					<div class="datos">
+						<span> ¿Olvidaste tu Usuario/Contraseña? <a href="#" > Hace click aquí </a> </span>
+					</div>
+
+					<div class="d-flex justify-content-center"> 
+						<form> 
+							<button type="button" class="btn btn-outline-warning btn-lg bg-light bg-opacity-25"> <a href="#" class="text-warning">INGRESAR </a></button>
+						</form>
+					</div>
+
+					<div class="datos"> 
+						<span> ¿No tenés una cuenta? <a href="#" > <strong> Crear cuenta </strong> </a> </span>
+					</div>
+
+		</section>
 	</div>
-
-	<div> 
-		<form> 
-			<div class="input-group mb-3 d-flex justify-content-center text-info" >
-  				<input type="text" class="form-control-lg bg-light bg-opacity-25 border-warning" placeholder="" aria-label="Username">
-			</div>
-		</form>
-
-	</div>
-	
-	<div class="datos">
-				<label for="contrasena" > CONTRASEÑA: </label>
-	</div>
-
-	<div>
-		<form>
-			<div class="input-group mb-3 d-flex justify-content-center text-info" >
-  				<input type="password" class="form-control-lg bg-light bg-opacity-25 border-warning" placeholder="" aria-label="Password">
-			</div>
-		</form>
-
-	</div>
-
-	<div class="datos">
-		<form>
-			<input class="form-check-input bg-warning" type="checkbox" value="" id="flexCheckDefault"> <span> NO SOY UN ROBOT </span>
-		</form>
-	</div>
-
-	<div class="datos">
-		<span> ¿Olvidaste tu Usuario/Contraseña? <a href="#" > Hace click aquí </a> </span>
-	</div>
-
-	<div class="d-flex justify-content-center"> 
-		<form> 
-			<button type="button" class="btn btn-outline-warning btn-lg bg-light bg-opacity-25"> <a href="#" class="text-warning">INGRESAR </a></button>
-		</form>
-	</div>
-
-	<div class="datos"> 
-		<span> ¿No tenés una cuenta? <a href="#" > <strong> Crear cuenta </strong> </a> </span>
-	</div>
-
-</div>
 
 </main>
 
