--- a/sucursales.html
+++ b/sucursales.html
@@ -60,11 +60,11 @@
 </nav>
   </header>
   <div>
-	<h3> SUCURSALES </h3>
-</div>
+		<h1> SUCURSALES </h1>
+	</div>
 
 	<div class="d-flex p-2 d-flex justify-content-center mb-4 text-center fs-3" > 
-		<h4 class="text-info"> Contamos con sucursales en toda la Capital Federal. ¡Te invitamos a buscar la más cercana a tu domicilio!</h4>
+		<h3 class="text-info"> Contamos con sucursales en toda la Capital Federal. ¡Te invitamos a buscar la más cercana a tu domicilio!</h3>
 	</div>
 
 	<div class="d-flex p-2 d-flex justify-content-evenly mb-5 ">
@@ -93,18 +93,19 @@
 		<div>
 		 <button type="button" class="btn btn-primary btn-lg btn btn-parimary border border-light rounded">Buscar</button>
 		</div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-		<div></div>
-</div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 
-<div class="maps">
-	<div> <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.23949906467!2d-58.43329845000001!3d-34.615823750000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658188843878!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> </div>
+	<div class="maps">
+				 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105073.23949906467!2d-58.43329845000001!3d-34.615823750000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3b4ef90cbd%3A0xa0b3812e88e88e87!2sBuenos%20Aires%2C%20CABA!5e0!3m2!1ses-419!2sar!4v1658188843878!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
 	</div>
+
 
 <footer>
 	<div class="d-flex p-2 d-flex justify-content-center mb-4 text-center fs-3"> 
