Modifiqué tamaños en la Home

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <main>
 
   <div class="slider">
-    <a href="#" class="foto1" ><img src="imagenes/slider1.jpg" alt="slider1" title="TUKI Shop" /> </a>
-    <a href="#" class="foto2" ><img src="imagenes/slider3.png" alt="slider2" title="TUKI Shop"  /> </a>
+    <img src="imagenes/slider1.jpg" alt="slider1" title="TUKI Shop" /> 
+    <img src="imagenes/slider3.png" alt="slider2" title="TUKI Shop"  /> 
   </div>
 
   <div>
