Agregue Alt a las imagenes faltantes

--- a/nosotros.html
+++ b/nosotros.html
@@ -49,7 +49,7 @@
 			<img src="imagenes/mascotas.png" alt="mascotas" title="Nosotros" class="imagen1" />
 		</div>
 		<div class="video1">
-			<a href="https://youtu.be/488uvzpPfj8" target="_blank"> <img src="imagenes/youtubee.jpg" title="Video TUKI Shop" class="video1" > </a>
+			<a href="https://youtu.be/488uvzpPfj8" target="_blank"> <img src="imagenes/youtubee.jpg" alt="video" title="Video TUKI Shop" class="video1" > </a>
 		</div>
 	</div>
 
