--- a/tienda.html
+++ b/tienda.html
@@ -67,7 +67,7 @@
                     <th> <span> Royal Canin adulto </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/royal.png" title="Royal adultos" width="150" /> </th>
+                    <th> <img src="imagenes/royal.png" alt="royaladultos" title="Royal adultos" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR  </a> </span>  </th>
@@ -82,7 +82,7 @@
                     <th> <span> Royal Canin medium </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/royal2.png" title="Royal medium" width="110" /> </th>
+                    <th> <img src="imagenes/royal2.png" alt="royalmedium" title="Royal medium" width="110" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" >  AGREGAR </a> </span>  </th>
@@ -97,7 +97,7 @@
                     <th> <span> Royal Canin cachorro </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/royal3.png" title="Royal cachorro" width="110" /> </th>
+                    <th> <img src="imagenes/royal3.png" alt="royalcachorro" title="Royal cachorro" width="110" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span>  </th>
@@ -112,7 +112,7 @@
                     <th> <span> Cat Chow </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/catchow1.png" title="Cat Chow" width="150" /> </th>
+                    <th> <img src="imagenes/catchow1.png" alt="catchow" title="Cat Chow" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" >  AGREGAR </a> </span>  </th>
@@ -129,7 +129,7 @@
                     <th> <span> Pro Plan </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/proplan1.png" title="Pro plan" width="150" /> </th> 
+                    <th> <img src="imagenes/proplan1.png" alt="proplan" title="Pro plan" width="150" /> </th> 
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" >  AGREGAR  </a> </span>  </th>
@@ -144,7 +144,7 @@
                     <th> <span> ReptoMin </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/reptomin.jpg" title="ReptoMin" width="110" /> </th>
+                    <th> <img src="imagenes/reptomin.jpg" alt="reptomin" title="ReptoMin" width="110" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR  </a> </span>  </th>
@@ -159,7 +159,7 @@
                     <th> <span> GoldFish </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/alimentopeces.png" title="GoldFish" width="110" /> </th>
+                    <th> <img src="imagenes/alimentopeces.png" alt="goldfish" title="GoldFish" width="110" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" >  AGREGAR  </a> </span> </th>
@@ -174,7 +174,7 @@
                     <th> <span> Alimento Roedores </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/alimentoroedores.png" title="Roedores" width="110" /> </th>
+                    <th> <img src="imagenes/alimentoroedores.png" alt="roedores" title="Roedores" width="110" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -206,7 +206,7 @@
                     <th> <span> Correa </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/correa.png" title="Correa" width="150" /> </th>
+                    <th> <img src="imagenes/correa.png" alt="correa" title="Correa" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span>  <a href="#" >  AGREGAR </a> </span> </th>
@@ -221,7 +221,7 @@
                     <th> <span> Collar para perro </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/collarperro.png" title="Collar" width="215" /> </th>
+                    <th> <img src="imagenes/collarperro.png" alt="collar" title="Collar" width="215" /> </th>
                   </tr> 
                   <tr>
                     <th> <span>  <a href="#" > AGREGAR </a> </span> </th>
@@ -236,7 +236,7 @@
                     <th> <span> Collar para gato </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/collargato.png" title="Collar" width="150" /> </th>
+                    <th> <img src="imagenes/collargato.png" alt="collar2" title="Collar" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -251,7 +251,7 @@
                     <th> <span> Bolso de traslado </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/bolso.png" title="Bolso de traslado" width="130" /> </th>
+                    <th> <img src="imagenes/bolso.png" alt="bolso" title="Bolso de traslado" width="130" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -270,7 +270,7 @@
                     <th> <span> Sogas </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/sogas.png" title="Sogas" width="150" /> </th> 
+                    <th> <img src="imagenes/sogas.png" alt="sogas" title="Sogas" width="150" /> </th> 
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -284,7 +284,7 @@
                     <th> <span> Pelotas </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/pelotas.png" title="Pelotas" width="140" /> </th>
+                    <th> <img src="imagenes/pelotas.png" alt="pelotas" title="Pelotas" width="140" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -299,7 +299,7 @@
                     <th> <span> Casa para Aves </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/casaaves.png" title="Casa para aves" width="70" /> </th>
+                    <th> <img src="imagenes/casaaves.png" alt="casa" title="Casa para aves" width="70" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -314,7 +314,7 @@
                     <th> <span> Pecera </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/pecera.png" title="Pecera" width="180" /> </th>
+                    <th> <img src="imagenes/pecera.png" alt="pecera" title="Pecera" width="180" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span>  </th>
@@ -345,7 +345,7 @@
                     <th> <span> Shampoo </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/shampoo.png" title="Shampoo" width="140" /> </th>
+                    <th> <img src="imagenes/shampoo.png" alt="shampoo" title="Shampoo" width="140" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" >  AGREGAR  </a> </span> </th>
@@ -360,7 +360,7 @@
                     <th> <span> Perfume </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/perfume.png" title="Perfume" width="200" /> </th>
+                    <th> <img src="imagenes/perfume.png" alt="perfume" title="Perfume" width="200" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span> </th>
@@ -375,7 +375,7 @@
                     <th> <span> Alicate </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/alicate.png" title="Alicate" width="150" /> </th>
+                    <th> <img src="imagenes/alicate.png" alt="alicate" title="Alicate" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" > AGREGAR </a> </span>  </th>
@@ -390,7 +390,7 @@
                     <th> <span> Peine </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/peine.png" title="Peine" width="220" /> </th>
+                    <th> <img src="imagenes/peine.png" alt="peine" title="Peine" width="220" /> </th>
                   </tr> 
                   <tr>
                     <th> <span> <a href="#" >  AGREGAR </a> </span>  </th>
@@ -421,7 +421,7 @@
                     <th> <span> Pulguicida </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/pulguicida.png" title="Pulguicida" width="150" /> </th>
+                    <th> <img src="imagenes/pulguicida.png" alt="pulguicida" title="Pulguicida" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span>  <a href="#" > AGREGAR </a> </span>  </th>
@@ -436,7 +436,7 @@
                     <th> <span> Crema Saniderm </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/crema.png" title="Crema Saniderm" width="150" /> </th>
+                    <th> <img src="imagenes/crema.png" alt="crema" title="Crema Saniderm" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span>  <a href="#" >  AGREGAR </a> </span> </th>
@@ -451,7 +451,7 @@
                     <th> <span> Gotas Inadrim </span> </th>
                   </tr>
                   <tr>
-                    <th> <img src="imagenes/gotas.png" title="Gotas Inadrim" width="150" /> </th>
+                    <th> <img src="imagenes/gotas.png" alt="gotas" title="Gotas Inadrim" width="150" /> </th>
                   </tr> 
                   <tr>
                     <th> <span>  <a href="#" >  AGREGAR </a> </span>  </th>
