--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,9 @@
   <meta name="keywords" content="animales, mascotas, perros, gatos, aves, reptiles, peces, pet, petshop, juguetes, felicidad, familia, alimento, comida, accesorios, caba, capital, razas, especies, tukishop, buenosaires" />
   <meta name="description" content="Si sos de Buenos Aires no podés perderte la oportunidad de conocer alguna de nuestras sucursales con los mejores precios y accesorios para tu mascota" />
 
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="contacto">
@@ -25,21 +28,37 @@
   </div>
   </div>
   <header>
-    <nav class="menuinfo" >
-      <ul class="menu1" >
-        <li><a href="index.html" title="Inicio" >INICIO</a></li>
-        <li><a href="nosotros.html" title="Nosotros" >NOSOTROS</a></li>
-        <li><a href="sucursales.html" title="Sucursales">SUCURSALES</a></li>
-        <li><a href="contacto.html" title="Contacto">CONTACTO</a></li>
-        <li><a href="login.html" title="Login">LOGIN</a></li>
-        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width=50 /> </a> </li>
+    <nav class="navbar navbar-expand-lg bg-success border border-light rounded" >
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse px-4 " id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white fw-bold fs-4" href="index.html">INICIO</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="sucursales.html">SUCURSALES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="contacto.html">CONTACTO</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="login.html">LOGIN</a>
+        </li>
+        <li>
+        	<a class="nav-link active" aria-current="page" href="tienda.html" target="_blank" >  <img src="imagenes/carrito.png" width="50" /> </a>
+        </li>
       </ul>
-      <ul class="menu2" >
-         <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
-         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="40" /> </a> </li>
-      </ul>
-      
-    </nav>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+    </div>
+  </div>
+</nav>
   </header>
   <main>
 
@@ -49,7 +68,7 @@
 	</div>
 
 	<div class="datos"> 
-		<h3> Por favor, completá el formulario para que nuestro equipo se ponga en contacto contigo a la brevedad: </h3>
+		<h2> Por favor, completá el formulario para que nuestro equipo se ponga en contacto contigo a la brevedad: </h2>
 	</div>
 
 	<div>
@@ -115,7 +134,7 @@
 
 	<div class="envio"> 
 		<form>
-			<input type="submit" />
+			<button type="submit" class="btn btn-success">Enviar</button>
 		</form>
 	</div>
 	
@@ -133,6 +152,9 @@
 		<img src="imagenes/gatos2.png" alt="razas"  title="Razas" />
 	</div>
 </footer>
+
+	<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
 </html>
