--- a/nosotros.html
+++ b/nosotros.html
@@ -12,6 +12,9 @@
   <meta name="keywords" content="animales, mascotas, perros, gatos, aves, reptiles, peces, pet, petshop, juguetes, felicidad, familia, alimento, comida, accesorios, caba, capital, razas, especies, tukishop, buenosaires" />
   <meta name="description" content="Si sos de Buenos Aires no podés perderte la oportunidad de conocer alguna de nuestras sucursales con los mejores precios y accesorios para tu mascota" />
 
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
 <body id="nosotros">
@@ -24,33 +27,61 @@
   </div>
   </div>
   <header>
-    <nav class="menuinfo" >
-      <ul class="menu1" >
-        <li><a href="index.html" title="Inicio" >INICIO</a></li>
-        <li><a href="nosotros.html" title="Nosotros" >NOSOTROS</a></li>
-        <li><a href="sucursales.html" title="Sucursales">SUCURSALES</a></li>
-        <li><a href="contacto.html" title="Contacto">CONTACTO</a></li>
-        <li><a href="login.html" title="Login">LOGIN</a></li>
-        <li><a href="tienda.html" target="_blank" > <img src="imagenes/carrito.png" alt="Tienda" title="Tienda" width="50" /> </a> </li>
+    <nav class="navbar navbar-expand-lg bg-success border border-light rounded" >
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse px-4 " id="navbarTogglerDemo01">
+      <a class="navbar-brand text-white fw-bold fs-4" href="index.html">INICIO</a>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="nosotros.html">NOSOTROS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="sucursales.html">SUCURSALES</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold fs-4" href="contacto.html">CONTACTO</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link active text-white fw-bold fs-4" aria-current="page" href="login.html">LOGIN</a>
+        </li>
+        <li>
+        	<a class="nav-link active" aria-current="page" href="tienda.html" target="_blank" >  <img src="imagenes/carrito.png" width="50" /> </a>
+        </li>
       </ul>
-      <ul class="menu2" >
-         <li> <form> <input type="text" placeholder="Buscar" /> </form> </li>
-         <li> <a href="#" > <img src="imagenes/lupa.png" alt="lupa" title="Buscar" width="40" /> </a> </li>
-      </ul>
-      
-    </nav>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Buscar</button>
+      </form>
+    </div>
+  </div>
+</nav>
   </header>
 
-  	<div class="titulo">
-		<h1> NOSOTROS </h1>
-	</div>
-	<div class="imagenprincipal">
-		<div>
-			<img src="imagenes/mascotas.png" alt="mascotas" title="Nosotros" class="imagen1" />
+  	<div>
+				<h1> NOSOTROS </h1>
 		</div>
-		<div class="video1">
-			<a href="https://youtu.be/488uvzpPfj8" target="_blank"> <img src="imagenes/youtubee.jpg" alt="video" title="Video TUKI Shop" class="video1" > </a>
-		</div>
+
+	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+	  <div class="carousel-inner">
+	    <div class="carousel-item active">
+	      <img src="imagenes/mascotas.png" class="d-block w-100 rounded-pill" alt="mascotas" title="Nosotros" width="100" />
+	    </div>
+
+	    <div class="carousel-item">
+	      <a href="https://youtu.be/488uvzpPfj8" target="_blank"> <img src="imagenes/youtubee.jpg" alt="video" class="d-block w-100 rounded-pill" title="Video TUKI Shop" class="video1" /> </a>
+	    </div>
+	  </div>
+	  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Previous</span>
+	  </button>
+	  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	    <span class="visually-hidden">Next</span>
+	  </button>
 	</div>
 
 	<main>
@@ -127,5 +158,10 @@
 	</footer>
 
 </main>
+
+
+	<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 </html>
